{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 34,
  "lineage": "3be94be4-a195-ad97-deeb-caf10c65f6ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "caas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-090031b2f161d4b4a",
            "id": "rtb-090031b2f161d4b4a",
            "owner_id": "237889007525",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc4d2b9509693408",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Packaging",
              "Project": "singualrity"
            },
            "vpc_id": "vpc-018cf98de9e098204"
          },
          "dependencies": [
            "aws_internet_gateway.caas",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "caas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237889007525:internet-gateway/igw-0bc4d2b9509693408",
            "id": "igw-0bc4d2b9509693408",
            "owner_id": "237889007525",
            "tags": {
              "Environment": "Packaging",
              "Project": "singualrity"
            },
            "vpc_id": "vpc-018cf98de9e098204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "caas_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237889007525:security-group/sg-04e160bacec46b16d",
            "description": "Dev VPC for singualrity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e160bacec46b16d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP 8000 for ecs",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP 8000 for ecs",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for EC2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Bastian",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "singualrity",
            "name_prefix": null,
            "owner_id": "237889007525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh",
              "Project": "singualrity"
            },
            "timeouts": null,
            "vpc_id": "vpc-018cf98de9e098204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "caas_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237889007525:subnet/subnet-07aca34efe2b69102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.10.32/27",
            "id": "subnet-07aca34efe2b69102",
            "map_public_ip_on_launch": false,
            "owner_id": "237889007525",
            "tags": {
              "Environment": "Packaging",
              "Name": "singualrity-private",
              "Project": "singualrity"
            },
            "vpc_id": "vpc-018cf98de9e098204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237889007525:subnet/subnet-086bff350debd3197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.10.64/27",
            "id": "subnet-086bff350debd3197",
            "map_public_ip_on_launch": false,
            "owner_id": "237889007525",
            "tags": {
              "Environment": "Packaging",
              "Name": "singualrity-private",
              "Project": "singualrity"
            },
            "vpc_id": "vpc-018cf98de9e098204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "caas_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237889007525:subnet/subnet-0c3187a8a2f476fe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.10.96/27",
            "id": "subnet-0c3187a8a2f476fe4",
            "map_public_ip_on_launch": true,
            "owner_id": "237889007525",
            "tags": {
              "Environment": "Packaging",
              "Name": "singualrity-public",
              "Project": "singualrity"
            },
            "vpc_id": "vpc-018cf98de9e098204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237889007525:subnet/subnet-03563b3cb3180cfdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.10.128/27",
            "id": "subnet-03563b3cb3180cfdc",
            "map_public_ip_on_launch": true,
            "owner_id": "237889007525",
            "tags": {
              "Environment": "Packaging",
              "Name": "singualrity-public",
              "Project": "singualrity"
            },
            "vpc_id": "vpc-018cf98de9e098204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237889007525:vpc/vpc-018cf98de9e098204",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.10.0/24",
            "default_network_acl_id": "acl-0f7d7c48dd51fa962",
            "default_route_table_id": "rtb-090031b2f161d4b4a",
            "default_security_group_id": "sg-099cd5c89239e590c",
            "dhcp_options_id": "dopt-0f379b2223aebed04",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-018cf98de9e098204",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-090031b2f161d4b4a",
            "owner_id": "237889007525",
            "tags": {
              "Environment": "Packaging",
              "Name": "singualrity-vpc",
              "Project": "singualrity",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}